@@ -1520,6 +1520,8 @@ MW_VIEW_MENU_MODIFICATION_INFO_SELECTED=Display for Current &Segment
 MW_VIEW_MENU_MODIFICATION_INFO_ALL=Display for &All Segments
 
 MW_VIEW_MENU_MARK_NBSP=Mark &Non-breakable Spaces
+MW_VIEW_MENU_MARK_WHITESPACE=Mark Whitespace
+MW_VIEW_MENU_MARK_BIDI=Mark Bidirectional Algorithm Control Characters
 
 # matches text area popup menu
 
@@ -1685,3 +1687,8 @@ SAVE_DIALOG_DESCRIPTION=Please select the interval at which the project should b
 SAVE_DIALOG_MINUTES=Minutes:
 SAVE_DIALOG_SECONDS=Seconds:
 
+#Marker tooltips
+MARKER_NBSP=Non-breakable space
+MARKER_TAB=Tab
+MARKER_TAG=Tag
+MARKER_REMOVETAG=Text to be removed
