@@ -378,6 +378,16 @@ public class EditorController implements IEditor {
     }
 
     /**
+     * returns the orientation of the document
+     * (so we can decide what way of tag colouring we need;
+     * if that has been fixed in an other way, this method can be removed again.).
+     * @return
+     */
+    public Document3.ORIENTATION getOrientation() {
+        return currentOrientation;
+    }
+
+    /**
      * {@inheritDoc}
      */
     public void requestFocus() {
