@@ -350,7 +350,9 @@ public class EditorTextArea3 extends JEditorPane {
         Document3 doc = getOmDocument();
         String trans = doc.extractTranslation();
 
-        if (trans != null) {
+        //there are issues when formatting rtl text. Don't do it, we use markers in that case.
+        //for slightly better performance, check here on orientation.
+        if (trans != null && controller.currentOrientation != Document3.ORIENTATION.ALL_LTR) {
             //prevent the formatting to become an undoable thing, by removing the undomanager temporary
             getOmDocument().removeUndoableEditListener(undoManager);
 
